src/Tests/Spectre.Console.Tests/Expectations/Cli/Parsing/OptionWithoutName/Test_5.Output.verified.txt
Error: Expected an option value.

       dog -f:
              ^ Did you forget the option value?